[package]
name = "ultracomb"
version = "0.1.0"
edition = "2021"
authors = ["Wasaka <your@email.com>"]
license = "GPL-3.0-or-later"
homepage = "https://youtu.be/dQw4w9WgXcQ"
description = "Ultracomb is a combination of flanging and phasing with continous movement in the frequency spectrum. The rendering pipeline for this was described and named by artist Au5."

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/Wasaka0/nih-plug.git", features = ["assert_process_allocs"], branch = "update-baseview"}
nih_plug_vizia = { git = "https://github.com/Wasaka0/nih-plug.git", branch = "update-baseview"}

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
